--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ html {
 }
 
 a {
+  display: inline-flex;
   text-decoration: none;
   color: inherit;
 }
@@ -80,6 +81,7 @@ ul {
 
 /* [05. ] Spacing CSS Properties */
 :root {
+  --spacing--00: clamp(0.5rem, 0.625vw + 0.266rem, 0.75rem);
   --spacing--01: clamp(0.75rem, 1.875vw + 0.047rem, 1.5rem);
   --spacing--02: clamp(1.5rem, 3.75vw + 0.094rem, 3rem);
   --spacing--03: clamp(3rem, 7.5vw + 0.188rem, 6rem);
