--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -7,7 +7,7 @@
   position: relative;
   z-index: 30;
   padding-block: var(--spacing--02);
-  padding-inline: var(--spacing--03);
+  padding-inline: var(--spacing--inline);
 }
 
 .mp-header__start {
