--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,9 @@ ul {
   --spacing--00: clamp(0.5rem, 0.625vw + 0.266rem, 0.75rem);
   --spacing--01: clamp(0.75rem, 1.875vw + 0.047rem, 1.5rem);
   --spacing--02: clamp(1rem, 5vw + -0.875rem, 3rem);
+  --spacing--03: clamp(1.5rem, 3.75vw + 0.094rem, 3rem);
   --spacing--inline: clamp(1rem, 12.5vw + -3.687rem, 6rem);
+  --spacing--hero: clamp(6rem, 15vw + 0.375rem, 12rem);
 }
 
 /* [06. ] Width CSS Properties */
@@ -103,4 +105,23 @@ body {
   font-size: 16px;
   color: var(--color--on-surface-variant);
   -webkit-font-smoothing: antialiased;
+}
+
+/* [09. ] Typography CSS Properties */
+.mp-display--large {
+  font-size: var(--font-size--display-large);
+  line-height: var(--leading--display-large);
+  letter-spacing: -0.003em;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--color--on-surface);
+}
+
+.mp-title--large {
+  font-size: var(--font-size--title-large);
+  line-height: var(--leading--title-large);
+  letter-spacing: 0.18em;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--color--on-surface);
 }
