--- a/src/components/hero/index.css
+++ b/src/components/hero/index.css
@@ -1,9 +1,43 @@
-/* sm:grid-cols-8 md:grid-cols-12 grid-rows-1 gap-2 h-hero */
 .mp-hero {
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
   grid-template-rows: 1fr;
   gap: 0.5rem;
-  padding-block: var(--spacing--02);
-  /* height: var(--height--hero); */
+  padding-block: var(--spacing--hero);
+  height: var(--height);
+}
+
+.mp-hero__inner {
+  grid-column: 1 / span 4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: var(--spacing--03);
+}
+
+.mp-hero__title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (min-width: 600px) {
+  .mp-hero {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+
+  .mp-hero__inner {
+    grid-column: 2 / span 6;
+  }
+}
+
+@media (min-width: 905px) {
+  .mp-hero {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+  }
+
+  .mp-hero__inner {
+    grid-column: 3 / span 8;
+  }
 }
