--- a/src/components/hero/index.css
+++ b/src/components/hero/index.css
@@ -22,6 +22,29 @@
   align-items: center;
 }
 
+.mp-hero-title-word {
+  clip-path: inset(0);
+}
+
+.mp-hero-title-word:nth-child(3),
+.mp-hero-title-word:nth-child(4) {
+  color: var(--color--primary);
+}
+
+.mp-hero-title-word-inner {
+  display: block;
+  animation: mp-hero-title-word 0.6s cubic-bezier(0.39, 0.58, 0.57, 1) forwards;
+}
+
+.mp-hero-title-letter {
+  display: inline-block;
+}
+
+.mp-hero-subtitle {
+  clip-path: inset(0);
+  animation: mp-hero-subtitle 0.6s cubic-bezier(0.39, 0.58, 0.57, 1) forwards;
+}
+
 @media (min-width: 600px) {
   .mp-hero {
     grid-template-columns: repeat(8, minmax(0, 1fr));
@@ -40,5 +63,23 @@
 
   .mp-hero-inner {
     grid-column: 3 / span 8;
+  }
+}
+
+@keyframes mp-hero-title-word {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes mp-hero-subtitle {
+  0% {
+    clip-path: inset(50% 0 50% 0);
+  }
+  100% {
+    clip-path: inset(0);
   }
 }
