refactor: About component to dynamically wrap text based on viewport width

--- a/src/components/about/index.css
+++ b/src/components/about/index.css
@@ -13,6 +13,11 @@
   gap: var(--spacing--03);
 }
 
+.mp-about-text {
+  display: flex;
+  flex-direction: column;
+}
+
 @media (min-width: 600px) {
   .mp-about {
     grid-template-columns: repeat(8, minmax(0, 1fr));
