refactor: about component and fix CSS styling

--- a/src/components/about/index.css
+++ b/src/components/about/index.css
@@ -14,8 +14,8 @@
 }
 
 .mp-about-word {
+  display: inline-flex;
   color: var(--color--on-disabled);
-  opacity: 0.3;
 }
 
 @media (min-width: 600px) {
